# Africrafts

./: .gitignore  LICENSE.md  README.md  app.py  build.sh  manage.py  pyproject.toml  requirements.txt
africrafts/: __init__.py  asgi.py  auth.py  forms.py  models.py  settings.py  urls.py  wsgi.py
africrafts/templates/layouts/: form_helper_login_example.html
artisan/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
artisan/migrations/: 0001_initial.py  0002_initial.py  0002_remove_product_artisan.py  0003_product_image.py  0003_rename_artisan_product_user.py  0004_alter_product_image.py  0004_product_slug.py
artisan/templates/: artisan_dashboard.html  artisan_index.html  signup-tmp.html
customer/: forms.py  models.py  urls.py  views.py
customer/migrations/: 0001_initial.py
customer/templates/: customer_index.html  customer_signup.html  signup_customer-tmp.html
landing/: urls.py  views.py
landing/templates/: about_us.html  index.html
shop/: admin.py  apps.py  models.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_category_checkoutaddress_order_orderproduct_and_more.py  0002_customer_user.py
shop/templates/: order_success.html  shop_cart.html  shop_checkout.html  shop_index.html
static/css/: about_us.css  order_success.css  style.css
staticfiles/css/: style.css
templates/: login_tmp.html
templates/includes/: footer.html  head.html  nav.html  navigation.html  navinfo.html  scripts.html  sidebar.html  simple-head.html
templates/layouts/: base.html
templates/registration/: login.html
(+6 files in other folders)
