[tool.poetry]
name = "africrafts"
version = "0.1.0"
description = ""
authors = ["travoroguna <trevoroguna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "3.6.0"
django = "4.2"
django-widget-tweaks = "1.4.12"
pillow = "^9.5.0"
sqlparse = "0.4.4"
tzdata = "2023.3"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
